# echo-net

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/echonet/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/echonet/: MainActivity.kt  MulticastService.kt
android/app/src/main/java/com/example/echonet/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/echonet/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
